Compile both for macosx and linux

--- a/Makefile_macosx
+++ b/Makefile_macosx
@@ -6,7 +6,7 @@
 #    By: cledant <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/11/26 10:40:13 by cledant           #+#    #+#              #
-#    Updated: 2017/09/13 14:45:31 by cledant          ###   ########.fr        #
+#    Updated: 2017/10/13 09:54:22 by cledant          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ CFLAGS = --std=c++14 -Werror -Wall -Wextra -O2
 
 OBJ_DIR_NAME = obj
 
-LIBS = -lglfw3
+LIBS = -lglfw3 -lglad
 
 FRAMEWORK = -framework OpenGL -framework Cocoa -framework IOkit -framework CoreVideo -framework OpenCL
 
@@ -26,6 +26,8 @@ INCLUDES_STB = ./stb
 
 INCLUDES_GLFW = ./glfw/include/GLFW
 
+INCLUDES_GLAD = ./glad/build/include
+
 GLFW_NAME = libglfw3.a
 
 GLFW_DIR = ./glfw
@@ -33,6 +35,14 @@ GLFW_DIR = ./glfw
 GLFW_BUILD_DIR = ./glfw/build
 
 GLFW_PATH = $(GLFW_BUILD_DIR)/src
+
+GLAD_NAME = libglad.a
+
+GLAD_DIR = ./glad
+
+GLAD_BUILD_DIR = ./glad/build
+
+GLAD_PATH = $(GLAD_BUILD_DIR)
 
 SRCS_NAME = main.cpp Window.cpp Input.cpp Glfw_manager.cpp GeneralException.cpp \
 			oGL_module.cpp World.cpp Shader.cpp Simple_box.cpp IEntity.cpp \
@@ -47,7 +57,13 @@ OBJ_SRCS = $(SRCS_NAME:%.cpp=$(OBJ_DIR_NAME)/%.o)
 
 NAME = particle_system
 
-all : glfw $(NAME)
+all : glfw glad $(NAME)
+
+glad : $(GLAD_PATH)/$(GLAD_NAME)
+
+$(GLAD_PATH)/$(GLAD_NAME) :
+	cmake -B$(GLAD_BUILD_DIR) -H$(GLAD_DIR)
+	make -C $(GLAD_BUILD_DIR)
 
 glfw : $(GLFW_PATH)/$(GLFW_NAME)
 
@@ -56,11 +72,11 @@ $(GLFW_PATH)/$(GLFW_NAME) :
 	make -C $(GLFW_BUILD_DIR)
 
 $(NAME) : $(OBJ_SRCS)
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS) -L$(GLFW_PATH) $(FRAMEWORK)
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS) -L$(GLFW_PATH) -L$(GLAD_PATH) $(FRAMEWORK)
 
 $(OBJ_DIR_NAME)/%.o : $(SRCS_PATH)/%.cpp
 	mkdir -p $(OBJ_DIR_NAME)
-	$(CC) -o $@ -c $< $(CFLAGS) -I$(INCLUDES) -I$(INCLUDES_GLFW) -I$(INCLUDES_GLM) -I$(INCLUDES_STB)
+	$(CC) -o $@ -c $< $(CFLAGS) -I$(INCLUDES) -I$(INCLUDES_GLFW) -I$(INCLUDES_GLM) -I$(INCLUDES_STB) -I$(INCLUDES_GLAD)
 
 clean :
 	rm -rf $(OBJ_DIR_NAME)
@@ -68,6 +84,7 @@ clean :
 fclean : clean
 	rm -rf $(NAME)
 	rm -rf $(GLFW_BUILD_DIR)
+	rm -rf $(GLAD_BUILD_DIR)
 
 re : fclean all
 
